update w.r.t. local setup

--- a/native/CMakeLists.txt
+++ b/native/CMakeLists.txt
@@ -63,8 +63,8 @@ if(CMAKE_BUILD_TYPE MATCHES Debug)
 endif()
 
 if(NOT CMAKE_CUDA_TOOLKIT_ROOT_DIR)
-  set(CMAKE_CUDA_TOOLKIT_ROOT_DIR "/usr/local/cuda")
-  set(CMAKE_CUDA_COMPILER "${CMAKE_CUDA_TOOLKIT_ROOT_DIR}/bin/nvcc")
+  set(CMAKE_CUDA_TOOLKIT_ROOT_DIR "/usr")
+  set(CMAKE_CUDA_COMPILER "/usr/bin/nvcc")
 endif()
 if(NOT CMAKE_CUDA_ARCHITECTURES)
   set(CMAKE_CUDA_ARCHITECTURES ${CUDA_ARCH})
